# serigraph

./: Cargo.toml  Justfile  README.md
benches/: benchmark.rs
examples/: bench.rs  condense.rs  dir_rec.rs  dot.rs  min.rs  obsidian.rs  scc.rs  topo.rs
serigraph/: Cargo.toml
serigraph-mdbook/: Cargo.toml  README.md
serigraph-mdbook/examples/: ptree.rs
serigraph-mdbook/src/: book.rs  main.rs
serigraph/benches/: benchmark.rs
serigraph/examples/: chu_liu_edmond.rs  page_rank.rs
serigraph/src/: dfs_acyclifier.rs  dfs_serializer.rs  dot_util.rs  lib.rs  outgoing_acyclifier.rs  outgoing_sorter.rs  print.rs  scc_subgraph_ser.rs  toposort_ser.rs
src/: ariffin18.rs  decomp_cycles.rs  dot_util.rs  lib.rs  main.rs  outgoing_sorter.rs  serialize.rs  utils.rs
src/algo/: chu_liu_edmond.rs  mod.rs
src/algo/dfs_ser/: mod.rs
src/algo/scc_subgraph/: condensation.rs  mod.rs
src/algo/toposort_ser/: mod.rs  outgoing_sorter.rs
src/debug/: mod.rs
src/readers/: mod.rs  obsidian.rs
verify/: chu_liu.py
