[package]
name = "serigraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
ignore = "0.4"
regex = "1"
nom-regex = "0.2.0"
once_cell = "1.13.0"
nom = "7.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"