[package]
name = "serigraph"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.2"
anyhow = "1"
log = "0.4.17"

[dev-dependencies]
clap = { version = "3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
rand = "0.8.5"
criterion = "0.3"
fern = "0.6"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "serigraph"
path = "src/lib.rs"