[package]
name = "serigraph-mdbook"
version = "0.1.0"
edition = "2021"

[dependencies]
serigraph = { path = "../serigraph" }
ptree = {version= "0.4.0", features=["petgraph"] }
petgraph = "0.6.2"
anyhow = "1"
log = "0.4.17"
clap = { version = "3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
rand = "0.8.5"
criterion = "0.3"
fern = "0.6"
urlencoding = "2.1.2"